# angel

./: .gitignore  .pre-commit-config.yaml  PHASES.md  README.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml  railway.json  requirements.txt
backend/app/: __init__.py  config.py  database.py  gamification.py  main.py  math_gen.py  models.py  schemas.py  seed.py  services.py  store.py  store_catalog.json
backend/app/content/: days_01_10.json  days_11_20.json  days_21_30.json  days_31_40.json
backend/app/routers/: answers.py  challenges.py  profile.py  progress.py  reading.py  store.py
backend/tests/: conftest.py  test_api.py  test_content.py  test_gamification.py  test_math_gen.py  test_store.py
docs/: DEPLOY.md
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  setupTests.ts  styles.css  test-utils.tsx
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/components/: ConfirmModal.tsx  FeedbackDino.tsx  LockedModal.tsx  NumberPad.tsx  OxygenGauge.tsx  ProgressBar.tsx  StarRow.tsx  StoryReader.test.tsx  StoryReader.tsx
frontend/src/data/: avatars.ts
frontend/src/hooks/: useAsOf.ts  useChild.ts
frontend/src/lib/: celebrate.ts  time.ts  words.ts
frontend/src/screens/: MapScreen.test.tsx  MapScreen.tsx  Onboarding.tsx  ProgressScreen.tsx  StoreScreen.test.tsx  StoreScreen.tsx
frontend/src/screens/day/: DayReview.tsx  DayScreen.tsx  MathStep.tsx  QuestionsStep.test.tsx  QuestionsStep.tsx  ReadingStep.tsx  RewardStep.tsx
